--- a/main.html
+++ b/main.html
@@ -16,30 +16,32 @@
     <div> <!-- This is the div that will take some parameters-->
         <label for="region">Select Region</label>
         <select id="region" name="region_selected">
-            <option value="15">REGION DE ARICA Y PARINACOTA</option>
-            <option value="1">REGION DE TARAPACA</option>
-            <option value="2">REGION DE ANTOFAGASTA</option>
-            <option value="3">REGION DE ATACAMA</option>
-            <option value="4">REGION DE COQUIMBO</option>
-            <option value="5">REGION DE VALPARAISO</option>
-            <option value="13">REGION METROPOLITANA</option>
-            <option value="6">REGION DEL LIB. B. O'HIGGINS</option>
-            <option value="7">REGION DEL MAULE</option>
-            <option value="16">REGION DE ÑUBLE</option>
-            <option value="8">REGION DEL BIO-BIO</option>
-            <option value="9">REGION DE LA ARAUCANIA</option>
-            <option value="14">REGION DE LOS RIOS</option>
-            <option value="10">REGION DE LOS LAGOS</option>
-            <option value="11">REGION DE AYSEN DEL G. C. IBAÑEZ</option>
-            <option value="12">REGION DE MAGALLANES Y LA ANTARTICA</option>
+            <option value="15region">REGION DE ARICA Y PARINACOTA</option>
+            <option value="1region">REGION DE TARAPACA</option>
+            <option value="2region">REGION DE ANTOFAGASTA</option>
+            <option value="3region">REGION DE ATACAMA</option>
+            <option value="4region">REGION DE COQUIMBO</option>
+            <option value="5region">REGION DE VALPARAISO</option>
+            <option value="13region">REGION METROPOLITANA</option>
+            <option value="6region">REGION DEL LIB. B. O'HIGGINS</option>
+            <option value="7region">REGION DEL MAULE</option>
+            <option value="16region">REGION DE ÑUBLE</option>
+            <option value="8region">REGION DEL BIO-BIO</option>
+            <option value="9region">REGION DE LA ARAUCANIA</option>
+            <option value="14region">REGION DE LOS RIOS</option>
+            <option value="10region">REGION DE LOS LAGOS</option>
+            <option value="11region">REGION DE AYSEN DEL G. C. IBAÑEZ</option>
+            <option value="12region">REGION DE MAGALLANES Y LA ANTARTICA</option>
         </select>
     </div>
 
-    <div id=main_viz> <!-- This div is the one that will have the map on the side and charts on the other-->
-        <img src="svgs/chile.svg" alt="chile">
-
-    </img>
-        <h1>Hola Pedro</h1>
+    <div id=main_grid_container> <!-- This div is the one that will have the map on the side and charts on the other-->
+        <div class=main_grid_item_map>
+            <img src="svgs/chile.svg" alt="chile"></img>
+        </div>
+        <div class=main_grid_item>
+            <h1>CAE evolution by region</h1>
+        </div>
     </div>
 
     <div> new div</div>
