still laying out the html

--- a/main.html
+++ b/main.html
@@ -36,11 +36,15 @@
     </div>
 
     <div id=main_grid_container> <!-- This div is the one that will have the map on the side and charts on the other-->
-        <div class=main_grid_item_map>
+        <div id = map_section class=main_grid_item>
             <img src="svgs/chile.svg" alt="chile"></img>
         </div>
-        <div class=main_grid_item>
-            <h1>CAE evolution by region</h1>
+        <div id = data_section class=main_grid_item>
+            <div class = trying> </div>
+            <div class = trying> </div>
+            <div class = trying> </div>
+            <div class = trying> </div>
+            <div class = trying> </div>
         </div>
     </div>
 
