--- a/main.html
+++ b/main.html
@@ -35,19 +35,16 @@
         </select>
     </div>
 
-    <div id=main_grid_container> <!-- This div is the one that will have the map on the side and charts on the other-->
-        <div id = map_section class=main_grid_item>
-            <img src="svgs/chile.svg" alt="chile"></img>
+    <!-- <div id = map_section> <!--This div is the one that has the map horizontally on the top -->
+            <!-- <img src="svgs/chile.svg" alt="chile"></img>
+        </div> -->
+    
+    <div id="main_grid_container">
+        <div id="map_section">
+            <img src="svgs/chile.svg" alt="chile">
         </div>
-        <div id = data_section class=main_grid_item>
-            <div class = trying> </div>
-            <div class = trying> </div>
-            <div class = trying> </div>
-            <div class = trying> </div>
-            <div class = trying> </div>
-        </div>
+    <div id="data_section"></div>
     </div>
-
     <div> new div</div>
 
 
