--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
                     sodipodi:nodetypes="cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc" />
                     <path
                     d="m 564.6628,278.9631 -1.356,-0.3438 -0.9169,0.1783 -0.6149,-0.1705 -0.7643,-0.8467 -0.4381,-0.2183 -0.7902,0.0969 -0.5982,-0.0949 -0.9058,-0.5361 -0.573,-0.2027 -0.4013,-0.4482 -0.2916,-0.006 -0.7938,0.4262 -0.4909,-0.111 -0.4701,0.4262 -0.2199,0.4559 -0.4214,0.1796 -1.8454,-0.1085 -0.8963,0.37 -0.2902,-0.2299 -0.4715,-0.7162 -1.1673,-0.3126 -0.4248,-0.4901 -1.0787,-0.6272 -0.2701,0.2929 -0.1274,0.5624 -0.3974,0.7018 -0.1464,1.9384 -0.2544,0.9438 -0.5404,0.655 -0.7102,0.4902 -0.5232,0.7546 -0.116,0.8299 -0.4603,0.358 -0.0629,0.6896 -0.3902,0.9001 -1.0961,0.9519 -0.024,0.5096 0.4546,1.0455 0.1602,0.9946 -0.1351,0.4943 -0.6392,0.4577 -0.183,0.4576 -0.8852,0.8645 -0.2266,0.4536 0.0485,0.8028 0.9459,-0.5051 0.428,0.2034 1.4669,0.3862 0.2126,0.1886 0.3295,0.8877 0.5172,0.5176 1.8056,0.1025 0.6034,-0.2734 0.3652,-0.6093 0.3417,-0.0116 1.761,1.2701 0.4446,0.1757 0.8115,0.6025 2.943,1.7263 2.4109,-0.1916 0.457,-0.1104 0.3705,0.2144 0.3881,0.7761 0.5322,0.0538 0.3381,-0.1615 0.1753,-0.6652 0.2427,-0.2363 0.7796,0.412 0.8299,-0.2351 0.0942,-0.4327 -0.1923,-0.4133 0.2437,-1.085 0.3889,-0.1937 0.4965,-0.5826 0.1891,-0.5967 0.4047,-0.093 0.6951,0.2467 0.3786,-0.4135 0.4726,-1.0422 -0.3037,-0.9635 0.2061,-0.7879 -0.2765,-0.4689 0.5897,-0.6639 -0.6018,-1.9439 0.0869,-0.6536 -0.0547,-0.7478 0.0925,-0.5167 -0.349,-0.5631 -0.2465,-1.0217 0.4066,-0.279 -0.4396,-0.5373 -0.798,-0.1963 -0.1731,-0.4831 0.3373,-0.6303 1.4647,-0.5322 0.1698,-0.8693 z"
-                    id="REGION DEL LIB. B. O'HIGGINS"
+                    id="REGION DEL MAULE"
                     class="unselected_region" />
                     <path
                     d="m 567.7022,269.666 -0.3899,-0.9296 -0.5304,-0.4224 -0.2775,-0.9726 -0.2672,-0.3248 -0.7895,-0.01 -0.386,-0.3313 -0.3582,-0.9603 -0.4243,-0.6459 -0.3996,-0.2105 -1.2228,0.4398 -0.8818,0.01 -0.7575,0.2758 -0.4706,0.009 -0.0322,0.8725 -0.8769,0.8841 -0.3802,0.6613 -0.3609,0.2777 -0.7425,0.1563 -0.5941,-0.0478 -0.4887,-0.2144 -1.0857,-0.9732 -0.5452,0.215 -1.0137,-0.7136 -0.8762,-0.3197 -0.6171,0.2306 -0.882,-0.859 -0.5793,-0.3887 -0.8577,-0.0905 -0.3188,0.5002 -0.5179,1.2805 -0.6217,1.0922 0.2963,0.6225 0.0759,1.5316 -0.0759,0.4374 -0.4954,0.423 0.0515,1.0272 -0.1373,2.1582 -0.429,1.2764 1.0787,0.6272 0.4248,0.4901 1.1673,0.3126 0.4715,0.7162 0.2902,0.2299 0.8963,-0.37 1.8454,0.1085 0.4214,-0.1796 0.2199,-0.4559 0.4701,-0.4262 0.4909,0.111 0.7938,-0.4262 0.2916,0.006 0.4013,0.4482 0.573,0.2027 0.9058,0.5361 0.5982,0.0949 0.7902,-0.0969 0.4381,0.2183 0.7643,0.8467 0.6149,0.1705 0.9169,-0.1783 1.356,0.3438 0.1756,-0.9263 0.7217,-1.9375 -0.371,-0.6574 0.4044,-0.2325 0.1962,-0.3901 0.2286,-1.3807 0.7227,-0.8396 0.3414,-0.8848 0.5212,-0.6445 -0.0545,-1.0281 z"
-                    id="REGION DEL MAULE"
+                    id="REGION DEL LIB. B. O'HIGGINS"
                     class="unselected_region" />
                     <path
                     d="m 558.52,297.1315 -0.3881,-0.7761 -0.3705,-0.2144 -0.457,0.1104 -2.4109,0.1916 -2.943,-1.7263 -0.8115,-0.6025 -0.4446,-0.1757 -1.761,-1.2701 -0.3417,0.0116 -0.3652,0.6093 -0.6034,0.2734 -1.8056,-0.1025 -0.5172,-0.5176 -0.3295,-0.8877 -0.2126,-0.1886 -1.4669,-0.3862 -0.428,-0.2034 -0.9459,0.5051 -0.2315,0.5946 0.1338,0.5136 -0.262,0.4699 0.1282,1.0709 -0.0797,0.537 -0.5954,1.6252 0.2564,0.2531 0.4764,0.005 0.161,0.4281 -0.2074,0.3163 0.2285,1.0958 0.5211,0.2932 1.1461,0.8597 0.1888,0.3223 0.1008,1.1864 0.3094,0.3583 -0.0418,0.4887 -0.8211,0.005 -0.0568,0.3582 1.0833,0.1503 0.9176,-0.1966 0.5172,0.1596 0.6648,0.7297 1.1541,0.6242 0.0436,0.2495 -0.676,0.5613 -0.066,0.9491 0.5853,0.3036 1.9008,-0.2891 0.7259,-0.0193 0.6231,-0.1517 0.3477,-0.2725 0.8484,-0.2749 1.0077,0.1829 0.4666,-0.0171 0.4991,-0.7737 0.6352,-0.4056 0.5081,0.029 0.9118,0.6854 1.2272,0.1865 0.7477,-0.0655 -0.4727,-0.5219 -0.0853,-0.6019 -0.3632,-0.3332 0.4131,-0.2674 -0.2412,-0.5438 0.0964,-0.4908 -0.341,-0.5438 0.4088,-0.9829 0.0581,-0.9028 0.8438,-0.2119 -0.1373,-0.8434 0.0801,-1.0424 z"
@@ -223,7 +223,7 @@
 
                 <!-- This is the total borrowed-->
                 <div id="total_borrowed">
-                    <h2>Total Borrowed (new CAEs + Old Ones)</h2> <span>In 2024 US Dollars</span>
+                    <h2>Total Borrowed (new CAEs + Old Ones)</h2> <span>In 2024 US Dollars (millions)</span>
                 </div>
             </div>
 
@@ -235,14 +235,12 @@
 
                 <!-- This is the Average Financed years section-->
                 <div id="avg_financed_years">
-                    <h2>Viz avg_financed_years</h2>
-                    <h6>Start with number</h6>
+                    <h2>Total Years Financed (Avg.)</h2>
                 </div>
 
                 <!-- This is the Average Percentage Financed section-->
                 <div id="percentage_financed">
-                    <h2>Viz percentage_financed</h2>
-                    <h6>Start with number</h6>
+                    <h2>Yearly tuition financed (Avg %)</h2>
                 </div>
             </div>
 
@@ -433,6 +431,29 @@ function avgFinancedYears(data,
                         return yrs_fin / n_students;
                     }
 
+// Function to calculate AVG Percentage Financed
+function avgPercentFinanced(data,
+                    selectedFiltersArray,
+                    ) { 
+                        let prct_fin = 0;
+                        let n_students = 0;
+                        let rs = selectedFiltersArray[0];
+                        let yrs = selectedFiltersArray[1];
+                        let qnt = selectedFiltersArray[2];
+                        let gnd = selectedFiltersArray[3];
+
+                        data.forEach(e => {
+                            if ((iscontained(e.region, rs)) &&
+                            (iscontained(e.año_entrega, yrs)) &&
+                            (iscontained(e.quintil, qnt)) &&
+                            (iscontained(e.genero, gnd))) {
+                                prct_fin += (e.porcentaje_financiado * e.prestamos_entregados);
+                                n_students += e.prestamos_entregados
+                            } 
+                        })
+                        return prct_fin / n_students;
+                    }
+
 
 // function to update total_caes_granted
 function updateTotalCaesGranted(filters) {
@@ -443,7 +464,7 @@ function updateTotalCaesGranted(filters) {
               filters 
           )
       );
-}
+    }
 
 
 // function to update total_borrowed
@@ -455,7 +476,7 @@ function updateTotalBorrowed(filters) {
               filters 
           )
       );
-}
+    }
 
 // function to update avg_loan
 function updateAvgLoan(filters) {
@@ -466,7 +487,7 @@ function updateAvgLoan(filters) {
               filters 
           )
       );
-}
+    }
 
 // function to update avg_financed_years
 function updateAvgFinancedYears(filters) {
@@ -474,6 +495,17 @@ function updateAvgFinancedYears(filters) {
       .text(
           avgFinancedYears(
               financed_years,
+              filters 
+          )
+      );
+    }
+
+// function to update avg_financed_years
+function updateAvgPercentFinanced(filters) {
+    d3.select("#percentage_financed p")
+      .text(
+          avgPercentFinanced(
+              percentage_financed,
               filters 
           )
       );}
@@ -491,7 +523,8 @@ function update_all() {
     updateTotalBorrowed(filters);
     updateTotalCaesGranted(filters);
     updateAvgLoan(filters);
-    updateAvgFinancedYears(filters)
+    updateAvgFinancedYears(filters);
+    updateAvgPercentFinanced(filters)
 }
 
 // -----------------------------------------------------------------------------
@@ -666,7 +699,7 @@ d3.json("www/data/avg_loan.json").then(function(data) {
     updateAvgLoan(filters)
       });
 
-// Loading total_CAEs granted
+// Loading years financed
 let financed_years = []
 
 d3.json("www/data/financed_years.json").then(function(data) {
@@ -679,6 +712,21 @@ d3.json("www/data/financed_years.json").then(function(data) {
       .append("p")
       .text("0")
     updateAvgFinancedYears(filters)
+      });
+
+// Loading years financed
+let percentage_financed = []
+
+d3.json("www/data/percent_financed.json").then(function(data) {
+    console.log("PERCENT FINANCED LOADED:", data);
+    console.log("LENGTH:", data.length);
+    percentage_financed = data;
+    
+
+    d3.select("#percentage_financed")
+      .append("p")
+      .text("0")
+    updateAvgPercentFinanced(filters)
       });
 
 // -----------------------------------------------------------------------------
